# Tetriz

./: CMakeLists.txt  color.h  control.cpp  control.h  define.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  readme.md  terminal.cpp  terminal.h  tetromino.cpp  tetromino.h  utils.cpp  utils.h
